:bug: fix: changing the scrollbar style

--- a/src/Styles/Css.css
+++ b/src/Styles/Css.css
@@ -29,3 +29,19 @@ html{
   height: 100%;
   object-fit: cover;
 }
+
+
+body::-webkit-scrollbar {
+    width: 3px;
+}
+
+body::-webkit-scrollbar-track {
+
+    @apply bg-secondary-50
+  
+}
+
+body::-webkit-scrollbar-thumb {
+    @apply bg-secondary-400
+
+}
